--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@ pipeline.show()</pre>
       <!--End mc_embed_signup-->
 
       <p></p>
-      <p>Ask me anything about Pipeline or just say hello at liorbenhorin@gmail.com</p>
+      <p><br></p>
+      <p>If you have any questions, issues or suggestions on how to improve Pipeline,<br> go ahead and email me at liorbenhorin@gmail.com</p>
       <!--<p>If you are interested in using Pipeline for commercial projects, or to create a custom Pipeline for your studio, email me at liorbenhorin@gmail.com</p>-->
 
     </div>
