--- a/index.html
+++ b/index.html
@@ -153,9 +153,25 @@
 pipeline.show()</pre>
       </p>
 
-      <h2 class="page-header">Documentation</h4>
-      <p>The current documentation is work in progress and will be updated soon!</p>
-      <p><a href="http://liorbenhorin.github.io/Pipeline_help/" target="_blank">Visit the pipeline documentation</a></p>
+      <h2 class="page-header">Getting started</h4>
+
+
+        <div class="row">
+          <div class="col-md-6">
+            <h3>Installation</h3>
+            <div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://player.vimeo.com/video/169601271?title=0&byline=0&portrait=0" width="800" height="488" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+            <br>
+          </div>
+          <div class="col-md-6">
+            <h3>Working with Assets</h3>
+            <div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://player.vimeo.com/video/169601270?title=0&byline=0&portrait=0" width="800" height="488" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+            <br>
+          </div>
+        </div>
+
+      <p></p><p></p>
+
+      <p><a href="http://liorbenhorin.github.io/Pipeline_help/" target="_blank">Visit the pipeline documentation (It's work in progress and will be updated soon!)</a></p>
 
     </div><!-- /container -->
 
