--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
       <div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://player.vimeo.com/video/168933558?title=0&byline=0&portrait=0" width="800" height="485" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
 
 
+
       <h2 class="page-header"><p><a id="features"></a>Features</p></h2>
       <p class='lead'>
         Pipeline is a simple and straight forward tool for managing maya projects,<br>
@@ -155,21 +156,31 @@ pipeline.show()</pre>
 
       <h2 class="page-header">Getting started</h4>
 
+        <p></p>
+        <img class="img-responsive" src="images/projects_diagram.gif" alt="projects">
 
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-4">
             <h3>Installation</h3>
             <div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://player.vimeo.com/video/169601271?title=0&byline=0&portrait=0" width="800" height="488" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
             <br>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
+            <h3>Project Manager</h3>
+            <div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://player.vimeo.com/video/169750230?title=0&byline=0&portrait=0" width="800" height="485" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+            <br>
+          </div>
+          <div class="col-md-4">
             <h3>Working with Assets</h3>
             <div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://player.vimeo.com/video/169601270?title=0&byline=0&portrait=0" width="800" height="488" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
             <br>
           </div>
         </div>
 
+
       <p></p><p></p>
+
+
 
       <p><a href="http://liorbenhorin.github.io/Pipeline_help/" target="_blank">Visit the pipeline documentation (It's work in progress and will be updated soon!)</a></p>
 
