--- a/index.html
+++ b/index.html
@@ -136,6 +136,28 @@
 
       <a id="version"></a>
       <h2 class="page-header">Version history</h2>
+      <p>1.0.2 - BETA - Free for educational and non commercial use!</p>
+      <p>New features</p>
+      <ul>
+      <li>Toggle component masters from showing in the assets bank in the scenes mode (helps keep things clean).</li>
+      <li>Record playblasts from shots, and Pipeline organize them in versions, too.</li>
+      <li>Store playblasts inside the project folder or in a sister directory (useful when sharing projects to not slow down sync times).</li>
+      <li>Improved notes module.</li>
+      <li>the pipeline settings file is now stored inside the maya prefs directory.</li>
+      <li>Rename (categories, assets, components, sequences and shots) - This is not recommended after files are being referenced.</li>
+      </ul>
+      <p>Fixes</p>
+      <ul>
+      <li>Frame range and settings are not being loaded on file open.</li>
+      <li>Names with underscore confuses the pipeline.</li>
+      <li>Files are not added to the recently opened</li>
+      <li>Project is not being set after creation, on some cases.</li>
+      <li>You cannot load a project, and need to restart Pipeline.</li>
+      <li>Many function fail when setting a version padding number other then 3.</li>
+      <li>Showing an empty column when no users set to project.</li>
+      <li>Not setting the project correctly in some cases on a windows machines.</li>
+      </ul>
+      <br>
       <p>1.0.0 - BETA - Free for educational and non commercial use!</p>
       <p>Like any program, it can have some bugs and glitchs,<br>so it's always a good idea to backup your work.<br>
       During the Beta stage Pipeline is collecting usage statistics.</p>
@@ -144,7 +166,8 @@
       <h2 class="page-header">Compatibility</h2>
       <p>OSX / Windows<br>
       Maya 2015, 2016, 2016 Ext 2<br>
-      Earlier Versions have not been tested.<br></p>
+      Earlier Versions have not been tested.<br>
+      Sorry, Maya 2017 for now is not supported.</p>
 
       <h2 class="page-header"><a id="installation"></a>Installation</h2>
       <p>Place the pipeline folder in your maya scripts folder.<br>
