--- a/index.html
+++ b/index.html
@@ -137,7 +137,11 @@
       <a id="version"></a>
       <h2 class="page-header">Version history</h2>
       <p>1.0.3 - BETA</p>
-      <ul><li>Pipeline is compatible with Maya 2017 Win/OSX</li></ul>
+      <ul>
+      <li>Pipeline is compatible with Maya 2017 Win/OSX</li>
+      <li>Removed dummy button 'Export' for now</li>
+      <li>Playblasts will now record sound</li>
+      </ul>
       <p>1.0.2 - BETA</p>
       <p>New features</p>
       <ul>
